fix: resolve all open issues (#25-#31) (#43)
#25: Add Python 3.13+ Flex Consumption remote build limitation footnote
to tutorial plan chooser table

#26: Clarify enterprise policy workarounds with numbered preference order
and cross-links to alternative tutorials (Flex, Dedicated)

#27: Expand Java environment-variables.md with JAVA_OPTS tuning,
FUNCTIONS_WORKER_JAVA_LOAD_APP_LIBS, and JVM configuration table

#28: Expand .NET environment-variables.md with DOTNET_ENVIRONMENT,
AZURE_FUNCTIONS_ENVIRONMENT, WEBSITE_RUN_FROM_PACKAGE, and
runtime selection table (dotnet-isolated vs dotnet)

#29: Add KQL table name mapping (Application Insights vs Log Analytics)
to troubleshooting/kql/index.md with usage guidance

#30: Update 15 tutorial IaC files from not_tested to syntax_validated
after confirming az bicep build passes for all 5 templates

#31: Already resolved — 23 portal blade captures across 60 docs

Closes #25, closes #26, closes #27, closes #28, closes #29,
closes #30, closes #31

Co-authored-by: Claude Opus 4.6 (1M context) <noreply@anthropic.com>